# pattern-adapters

./: .gitignore  Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_and.rs  fuzz_continuity.rs  fuzz_or.rs  fuzz_range.rs  fuzz_repeat.rs  fuzz_str_searcher.rs  fuzz_then.rs  utils.rs
pattern-adapters-macro/: Cargo.toml
pattern-adapters-macro/src/: lib.rs  pattern.rs  pattern_kind.rs
pattern-adapters-macro/tests/: class.rs  empty_string.rs  mod.rs
src/: lib.rs
src/adapters/: fused.rs  greedy_reject.rs  indexed.rs  internal.rs  limit.rs  limited.rs  min.rs  mod.rs  peekable.rs  repeat.rs  simplify.rs  skip.rs  stateful.rs  then.rs  viewer.rs
src/logic/: mod.rs  not.rs  or.rs  patterns.rs
src/utils/: range.rs
