[package]
name = "pattern-adapters"
version = "0.1.0"
authors = ["Lucas <24826124+Luro02@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
alloc = []
std = []

[dependencies]

[dev-dependencies]
pretty_assertions = "0.6"
version-sync = "0.9"
