[package]
name = "pattern-adapters-macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
regex-syntax = "0.6"

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "0.6"
